--- a/ui/ui_import_data.ui
+++ b/ui/ui_import_data.ui
@@ -174,14 +174,14 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="2">
+       <item row="1" column="3">
         <widget class="QToolButton" name="tbSignFolder">
          <property name="text">
           <string>...</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="2">
+       <item row="2" column="3">
         <widget class="QToolButton" name="tbHouseFolder">
          <property name="text">
           <string>...</string>
@@ -191,31 +191,55 @@
        <item row="2" column="1">
         <widget class="QLineEdit" name="edtHouseFolder"/>
        </item>
-       <item row="0" column="2">
+       <item row="0" column="3">
         <widget class="QToolButton" name="tbFamilyFolder">
          <property name="text">
           <string>...</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="3">
+       <item row="0" column="4">
         <widget class="QPushButton" name="btnFamilyBrowse">
          <property name="text">
           <string>Browse ...</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="3">
+       <item row="1" column="4">
         <widget class="QPushButton" name="btnSignFolder">
          <property name="text">
           <string>Browse ...</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="3">
+       <item row="2" column="4">
         <widget class="QPushButton" name="btnHouseFolder">
          <property name="text">
           <string>Browse ...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2">
+        <widget class="QCheckBox" name="cbFamilyPhoto">
+         <property name="text">
+          <string>Download</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="2">
+        <widget class="QCheckBox" name="cbSign">
+         <property name="text">
+          <string>Download</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="2">
+        <widget class="QCheckBox" name="cbHousePhoto">
+         <property name="text">
+          <string>Download</string>
          </property>
         </widget>
        </item>
