--- a/resources.qrc
+++ b/resources.qrc
@@ -28,6 +28,7 @@
     <file>images/icons/flts_help.png</file>
     <file>images/icons/flts_scheme_docs_dir.png</file>
     <file>images/icons/flts_import_plot.png</file>
+    <file>images/icons/flts_import_plot_cropped.png</file>
     <file>images/icons/flts_login.png</file>
     <file>images/icons/flts_logout.png</file>
     <file>images/icons/flts_lodgement.png</file>
@@ -42,6 +43,7 @@
     <file>images/icons/flts_open_file.png</file>
     <file>images/icons/flts_password.png</file>
     <file>images/icons/flts_plot_module.png</file>
+    <file>images/icons/flts_plot_module_cropped.png</file>
     <file>images/icons/flts_print.png</file>
     <file>images/icons/flts_report.png</file>
     <file>images/icons/flts_save.png</file>
