Added "Set CRS" button

--- a/resources.qrc
+++ b/resources.qrc
@@ -48,6 +48,7 @@
     <file>images/icons/flts_report.png</file>
     <file>images/icons/flts_save.png</file>
     <file>images/icons/flts_scan.png</file>
+    <file>images/icons/flts_scheme_crs.png</file>
     <file>images/icons/flts_scheme_import_plot.png</file>
     <file>images/icons/flts_scheme_management.png</file>
     <file>images/icons/flts_scheme_management_assessment1.png</file>
