--- a/ui/flts/ui_scheme_lodgement.ui
+++ b/ui/flts/ui_scheme_lodgement.ui
@@ -84,7 +84,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enter scheme information below. Please note the scheme number will be automatically generated&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enter scheme information below. Please note the scheme and SG numbers will be automatically generated&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
@@ -278,10 +278,10 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="1" column="1" colspan="2">
         <widget class="QDoubleSpinBox" name="dbl_spinbx_block_area">
          <property name="decimals">
-          <number>4</number>
+          <number>0</number>
          </property>
          <property name="maximum">
           <double>10000000.000000000000000</double>
