--- a/ui/flts/ui_scheme_lodgement.ui
+++ b/ui/flts/ui_scheme_lodgement.ui
@@ -267,14 +267,14 @@
        <item row="0" column="2">
         <widget class="QRadioButton" name="radio_hectares">
          <property name="text">
-          <string>Hectares</string>
+          <string>Hectares (Ha)</string>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QRadioButton" name="radio_sq_meters">
          <property name="text">
-          <string>Square Meters</string>
+          <string>Square Meters (Sq.m)</string>
          </property>
         </widget>
        </item>
