Added respective widget icons

--- a/resources.qrc
+++ b/resources.qrc
@@ -67,6 +67,7 @@
     <file>images/icons/flts_users_manage.png</file>
     <file>images/icons/flts_validate.png</file>
     <file>images/icons/flts_view_file.png</file>
+    <file>images/icons/flts_shortcut.png</file>
     <file>images/icons/mobile_collect.png</file>
     <file>images/icons/mobile_data_management.png</file>
     <file>images/icons/mobile_import.png</file>
