--- a/ui/flts/ui_user_shortcut.ui
+++ b/ui/flts/ui_user_shortcut.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Shortcuts</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../../resources.qrc">
+    <normaloff>:/plugins/stdm/images/icons/flts_shortcut.png</normaloff>:/plugins/stdm/images/icons/flts_shortcut.png</iconset>
+  </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="3" column="0">
     <widget class="QCheckBox" name="chb_donotshow">
@@ -155,7 +159,9 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
