--- a/ui/ui_import_data.ui
+++ b/ui/ui_import_data.ui
@@ -87,6 +87,13 @@
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QRadioButton" name="rbSupportDoc">
+         <property name="text">
+          <string>Supporting Documents</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </item>
@@ -170,7 +177,7 @@
        <item row="2" column="0">
         <widget class="QLabel" name="label_9">
          <property name="text">
-          <string>House Photo</string>
+          <string>House Map:</string>
          </property>
         </widget>
        </item>
@@ -240,6 +247,37 @@
         <widget class="QCheckBox" name="cbHousePhoto">
          <property name="text">
           <string>Download</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_11">
+         <property name="text">
+          <string>Support Docs:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QLineEdit" name="edtSupportDocFolder"/>
+       </item>
+       <item row="3" column="2">
+        <widget class="QCheckBox" name="cbSupportDoc">
+         <property name="text">
+          <string>Download</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="3">
+        <widget class="QToolButton" name="tbSupportDoc">
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="4">
+        <widget class="QPushButton" name="btnSupportDoc">
+         <property name="text">
+          <string>Browse</string>
          </property>
         </widget>
        </item>
