--- a/ui/ui_options.ui
+++ b/ui/ui_options.ui
@@ -474,6 +474,13 @@
          </layout>
         </widget>
        </item>
+       <item row="9" column="2">
+        <widget class="QPushButton" name="btnTest">
+         <property name="text">
+          <string>Test Multi </string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </widget>
