--- a/ui/ui_import_data.ui
+++ b/ui/ui_import_data.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>693</width>
+    <width>690</width>
     <height>576</height>
    </rect>
   </property>
@@ -154,6 +154,13 @@
        <string>Local Media Folders:</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_6">
+       <item row="4" column="0">
+        <widget class="QLabel" name="label_12">
+         <property name="text">
+          <string>ID Picture</string>
+         </property>
+        </widget>
+       </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_8">
          <property name="text">
@@ -253,31 +260,55 @@
        <item row="3" column="0">
         <widget class="QLabel" name="label_11">
          <property name="text">
-          <string>Support Docs:</string>
+          <string>House Picture</string>
          </property>
         </widget>
        </item>
        <item row="3" column="1">
-        <widget class="QLineEdit" name="edtSupportDocFolder"/>
+        <widget class="QLineEdit" name="edtHousePic"/>
        </item>
        <item row="3" column="2">
-        <widget class="QCheckBox" name="cbSupportDoc">
+        <widget class="QCheckBox" name="cbHousePic">
          <property name="text">
           <string>Download</string>
          </property>
         </widget>
        </item>
        <item row="3" column="3">
-        <widget class="QToolButton" name="tbSupportDoc">
+        <widget class="QToolButton" name="tbHousePic">
          <property name="text">
           <string>...</string>
          </property>
         </widget>
        </item>
        <item row="3" column="4">
-        <widget class="QPushButton" name="btnSupportDoc">
+        <widget class="QPushButton" name="btnHousePic">
          <property name="text">
-          <string>Browse</string>
+          <string>Browse ...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QLineEdit" name="edtIdPic"/>
+       </item>
+       <item row="4" column="2">
+        <widget class="QCheckBox" name="cbIdPic">
+         <property name="text">
+          <string>Download</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="3">
+        <widget class="QToolButton" name="tbIdPic">
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="4">
+        <widget class="QPushButton" name="btnIdPic">
+         <property name="text">
+          <string>Browse ...</string>
          </property>
         </widget>
        </item>
